update description of recipes, and remove about page

--- a/pages/pancakes.html
+++ b/pages/pancakes.html
@@ -11,6 +11,7 @@
     <p></p>
     <img src="../img/pancakes1200x675.jpeg" alt="Signature Pancakes"
     width="300">
+    <p>This pancake recipe has been passed down from generation to generation.</p>
     <p>Ingredients:</p>
     <ul>
         <li>1 cup pancake mix</li>
