--- a/pages/ramen.html
+++ b/pages/ramen.html
@@ -11,6 +11,7 @@
     <p></p>
     <img src="../img/shinramen1500x1125.jpg" alt="Shin Ramen Noodles"
     width="300">
+    <p>This ramen recipe has been passed down from generation to generation.</p>
     <p>Ingredients:</p>
     <ul>
         <li>One packet of Shin Ramen Noodles</li>
