--- a/pages/tjorangechicken.html
+++ b/pages/tjorangechicken.html
@@ -11,6 +11,8 @@
     <p></p>
     <img src="../img/tjorangechicken1370x918.jpeg" alt="Trader Joe's Orange Chicken"
     width="300">
+    <p>This Trader Joe's Orange Chicken recipe was passed down from generation to generation.</p>
+
     <p>Ingredients:</p>
     <ul>
         <li>One bag of Trader Joe's Orange Chicken</li>
