--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lucas Winter Recipes</title>
+    <title>My Recipes</title>
 </head>
 <body>
-    <h1>Lucas' Recipes</h1>
-    <a href="pages/about.html">About</a>
+    <h1>My Recipes</h1>
     <p></p>
 
     <h3>Recipe 1:</h3>
