add style and recipe cards using box method

--- a/index.html
+++ b/index.html
@@ -4,28 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" />
     <title>My Recipes</title>
 </head>
 <body>
     <h1>My Recipes</h1>
     <p></p>
+    <div class="recipe-grid">
+        <div class="recipe-card">
+            <img src="img/tjorangechicken1370x918.jpeg" alt="Trader Joe's Orange Chicken" width="300" class ="recipe-img">
+            <div class="recipe-content">
+                <h3 class="recipe-meal-title">Trader Joe's Orange Chicken</h3>
+                <div class ="recipe-description">This Trader Joe's Orange Chicken recipe was passed down from generation to generation. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+                <a href="pages/tjorangechicken.html" class="recipe-name-link">Recipe</a>
+            </div>
+        </div>
 
-    <h3>Recipe 1:</h3>
-    <a href="pages/tjorangechicken.html">Trader Joe's Orange Chicken</a>
-    <p></p>
-    <img src="img/tjorangechicken1370x918.jpeg" alt="Trader Joe's Orange Chicken"
-    width="300">
+        <div class="recipe-card">
+            <img src="img/pancakes1200x675.jpeg" alt="Signature Pancakes" width="300" class ="recipe-img">
+            <div class="recipe-content">
+                <h3 class="recipe-meal-title">Signature Pancakes</h3>
+                <div class ="recipe-description">This pancake recipe was passed down from generation to generation. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+                <a href="pages/pancakes.html" class="recipe-name-link">Recipe</a>
+            </div>
+        </div>
 
-    <h3>Recipe 2:</h3>
-    <a href="pages/pancakes.html">Signature Pancakes</a>
-    <p></p>
-    <img src="img/pancakes1200x675.jpeg" alt="Signature Pancakes"
-    width="300">
-
-    <h3>Recipe 3:</h3>
-    <a href="pages/ramen.html">Ramen Noodles</a>
-    <p></p>
-    <img src="img/shinramen1500x1125.jpg" alt="Ramen Noodles"
-    width="300">
+        <div class="recipe-card">
+            <img src="img/shinramen1500x1125.jpg" alt="Ramen Noodles" width="300" class ="recipe-img">
+            <div class="recipe-content">
+                <h3 class="recipe-meal-title">Ramen Noodles</h3>
+                <div class ="recipe-description">This ramen noodle recipe was passed down from generation to generation. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+                <a href="pages/ramen.html" class="recipe-name-link">Recipe</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
