--- a/pages/tjorangechicken.html
+++ b/pages/tjorangechicken.html
@@ -4,33 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css" />
     <title>Document</title>
 </head>
 <body>
-    <h2>Trader Joe's Orange Chicken</h2>
-    <p></p>
+    <h2 class="recipe-page-title">Trader Joe's Orange Chicken</h2>
     <img src="../img/tjorangechicken1370x918.jpeg" alt="Trader Joe's Orange Chicken"
-    width="300">
-    <p>This Trader Joe's Orange Chicken recipe was passed down from generation to generation.</p>
+    width="300" class="direction-img">
+    <!-- <p>This Trader Joe's Orange Chicken recipe was passed down from generation to generation.</p> -->
 
-    <p>Ingredients:</p>
-    <ul>
-        <li>One bag of Trader Joe's Orange Chicken</li>
-        <li>1 tbsp oil</li>
-    </ul>
-    <p>Directions:</p>
-    <ol>
-        <li>Heat your skillet with 1 tbsp oil to medium heat</li>
-        <li>Open the broccoli bag and empty its contents into the skillet</li>
-        <li>Cook until soft</li>
-        <li>Remove broccoli from skillet</li>
-        <li>Turn the stove up to medium/high heat. Place beef into the skillet</li>
-        <li>Heat until cooked through and golden brown</li>
-        <li>Put broccoli back into the skillet with the beef</li>
-        <li>Empty sauce packets into the skillet</li>
-        <li>Cook for 1-3 minutes</li>
-        <li>Serve and enjoy</li>
-    </ol>
+    <div class="directions-card">
+        <div class="list-card">
+            <p class="list-header">Ingredients:</p>
+            <ul>
+                <li>One bag of Trader Joe's Orange Chicken</li>
+                <li>1 tbsp oil</li>
+            </ul>
+        </div>
+        <div class="list-card">
+            <p class="list-header">Directions:</p>
+            <ol>
+                <li>Heat your skillet with 1 tbsp oil to medium heat</li>
+                <li>Open the broccoli bag and empty its contents into the skillet</li>
+                <li>Cook until soft</li>
+                <li>Remove broccoli from skillet</li>
+                <li>Turn the stove up to medium/high heat. Place beef into the skillet</li>
+                <li>Heat until cooked through and golden brown</li>
+                <li>Put broccoli back into the skillet with the beef</li>
+                <li>Empty sauce packets into the skillet</li>
+                <li>Cook for 1-3 minutes</li>
+                <li>Serve and enjoy</li>
+            </ol>
+        </div>
     
+    </div>
 </body>
 </html>
